@@ -18,53 +18,54 @@
  */
 package co.elastic.apm.test;
 
+import co.elastic.apm.agent.test.AgentFileAccessor;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.testcontainers.containers.GenericContainer;
+import org.testcontainers.containers.output.OutputFrame;
 import org.testcontainers.containers.wait.strategy.Wait;
 
-import java.io.File;
-import java.io.FileFilter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.time.Duration;
 import java.util.Arrays;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 class ServiceIT { // TODO : maybe rename/move this test 'AgentSetupTest' seems a reasonable test to cover most use-cases
 
     @ParameterizedTest
     @ValueSource(strings = {"openjdk:8", "openjdk:11", "openjdk:17"})
     void testServiceNameAndVersionFromManifest(String image) {
-        GenericContainer<TestAppContainer> app = testAppWithJavaAgent(image)
-            .waitingFor(Wait.forLogMessage(".* Starting Elastic APM .*", 1));
+        try (GenericContainer<TestAppContainer> app = testAppWithJavaAgent(image)) {
 
-        app.start();
-        try {
+            app.waitingFor(Wait.forLogMessage(".* Starting Elastic APM .*", 1))
+                .start();
 
             assertThat(app.getLogs()).contains(" as My Service Name (My Service Version) on ");
-        } finally {
-            app.stop();
         }
     }
 
     @Test
     void testSecurityManagerWarning() {
-        TestAppContainer app = testAppWithJavaAgent("openjdk:17")
-            .withSecurityManager()
-            .waitingFor(Wait.forLogMessage("Security manager without agent grant-all permission", 1));
+        String expectedMsg = "Security manager without agent grant-all permission";
 
-        // we expect startup to fail fast as JVM should not even properly start
-        app.withStartupTimeout(Duration.ofSeconds(1));
+        try (TestAppContainer app = testAppWithJavaAgent("openjdk:17")) {
 
-        assertThatThrownBy(app::start, "app startup is expected to fail");
+            app.withSecurityManager()
+                .waitingFor(Wait.forLogMessage(expectedMsg, 1))
+                // we expect startup to fail fast as JVM should not even properly start
+                .withStartupTimeout(Duration.ofSeconds(1));
+
+            app.start();
+
+            assertThat(app.getLogs(OutputFrame.OutputType.STDERR)).contains(expectedMsg);
+        }
+
     }
 
     @Test
@@ -78,33 +79,20 @@ class ServiceIT { // TODO : maybe rename/move this test 'AgentSetupTest' seems a
             "};"), StandardOpenOption.CREATE
         );
 
-        TestAppContainer app = testAppWithJavaAgent("openjdk:17")
-            .withSecurityManager(tempPolicy)
-            .waitingFor(Wait.forLogMessage("Hello World!", 1))
-            .withStartupTimeout(Duration.ofSeconds(5));
+        try (TestAppContainer app = testAppWithJavaAgent("openjdk:17")) {
+            app.withSecurityManager(tempPolicy)
+                .waitingFor(Wait.forLogMessage("Hello World!", 1))
+                .withStartupTimeout(Duration.ofSeconds(5))
+                .withRemoteDebug(5005);
 
-        app.withRemoteDebug(5005);
-
-        try {
             app.start();
-
-        } finally {
-            app.stop();
         }
     }
 
     private TestAppContainer testAppWithJavaAgent(String image) {
         return new TestAppContainer(image)
-            .withAppJar(Paths.get("target/main-app-test.jar"))
-            .withJavaAgent(Paths.get(getAgentJar()));
+            .withAppJar(Path.of("target/main-app-test.jar"))
+            .withJavaAgent(AgentFileAccessor.getPathToJavaagent());
     }
 
-    private static String getAgentJar() { // TODO : refactor to use common code to do this
-        File buildDir = new File("../../elastic-apm-agent/target/");
-        FileFilter fileFilter = file -> file.getName().matches("elastic-apm-agent-\\d\\.\\d+\\.\\d+(\\.RC\\d+)?(-SNAPSHOT)?.jar");
-        return Arrays.stream(buildDir.listFiles(fileFilter))
-            .findFirst()
-            .map(File::getAbsolutePath)
-            .orElseThrow(() -> new IllegalStateException("Agent jar not found. Execute mvn package to build the agent jar."));
-    }
 }
